# cookiecutter-manim

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  animacao.py  pyproject.toml
