[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-animation"
version = "0.1.0"
description = "A Manim animation project"
authors = [{name = "Pedro Volpi", email = "pedrovolpinacif@gmail.com"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "manim",
    "numpy",
]

# ===== Linting & Formatting =====
[tool.ruff]
select = [
    "E", "F", "I", "B", "C", "UP",
    #"ANN",  # flake8-annotations
]
ignore = [
    "E402", "F403",
]
line-length = 120
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["volpi_utils"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
# 'strict = true' is all you need for a strong base configuration.
# It correctly sets ignore_missing_imports to false globally.
strict = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_defs = true
